--- a/exp4.html
+++ b/exp4.html
@@ -474,7 +474,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/index-alt.js"></script>
 
-    <script src="overview/days-overview.js"></script>
+    <script src="overview/days-overview_exp.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
