--- a/index-old.html
+++ b/index-old.html
@@ -1,4 +1,3 @@
-<!-- Network Uptime, Card Recent Incidents -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,9 +16,8 @@
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -34,10 +32,8 @@
 
 <body>
 
-    <!-- Preloader Section -->
     <div id="preloader">
         <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
     </div>
 
 
@@ -91,151 +87,24 @@
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
                         <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center wow fadeInUp" data-wow-delay="100ms">
+                            <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item-aag">Home
                                 </li>
                                 <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Line Overview</h2>
+                        <h2 class="page-title">Line Overview</h2>
                     </div>
                 </div>
             </div>
         </div>
-
-                <!-- Delays Overview (> 10 mins) -->
-        <div class="row row-do">
-            <div class="chart col-xl-12 col-lg-12 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-do h-100 py-2">
-                    <div class="card-header card-header-active py-3 d-flex align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-black">
-                            <span data-title="Only delays reported officially will be shown">
-                                Network Uptime (18 Feb - 18 May 2025)</span>
-                        </h6>
-                    </div>
-                    <!-- Card Body -->
-                    <div class="card-body card-body-do">
-
-                        <!-- 90 days (desktop/tablet) -->
-                        <div class="uptime-bars uptime-bars-90 d-flex align-items-end"></div>
-
-                        <!-- 30 days (mobile) -->
-                        <div class="uptime-bars uptime-bars-30 d-flex align-items-end"></div>
-                        <div class="d-flex justify-content-between mt-2" style="font-size:0.9em;">
-                            <span class="text-muted days-label" id="uptime-days-label">90 days ago</span>
-                            <span class="text-muted" data-date="2025-05-18" id="data-date"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-                <!-- Recent Incidents -->
-        <div class="row row-ri">
-            <div class="slide-container swiper">
-                <div class="slide-content">
-                    <div class="card-wrapper swiper-wrapper">
-                        <!-- Card 1 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, please expect an additional 10mins train travel
-                                    time between #Yishun and #Sembawang. Free regular bus service is available between
-                                    #Yishun and #Woodlands.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 2 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, pls add additional 10mins train travel time
-                                    between #Tampines and #PasirRis. Free regular bus service is available between
-                                    #Tampines and #PasirRis.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 3 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px">
-                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
-                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
-                                    #Bishan.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 4 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="400ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1908029621167382639"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track fault, please expect an additional 20mins of travelling time
-                                    between #Queenstown and #BoonLay. Shuttle train are available between #Clementi and
-                                    #JurongEast and #JurongEast and #Lakeside. Free regular bus is available...
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </button>
-                <div class="swiper-pagination"></div>
-            </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">View Incident History &nbsp;<i
-                        class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
-
-        <br>
-        <br>
 
         <!-- Days Overview -->
         <div class="row row-lrd">
+            <div class="alert alert-primary wow fadeInUp" data-wow-delay="100ms" role="alert"
+                style="margin-bottom: 2em; cursor: default;"> <i class="fa-solid fa-circle-info"></i>&nbsp;
+                <b id="data-date"></b>
+            </div>
             <!-- NSL -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                 <div class="card card-nsl border-nsl h-100 py-2">
@@ -448,53 +317,162 @@
         <br>
         <br>
 
+        <!-- Delays Overview (> 10 mins) -->
+        <div class="row row-do">
+            <div class="chart col-xl-12 col-lg-12 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-do h-100 py-2">
+                    <div class="card-header card-header-active py-3 d-flex align-items-center justify-content-between">
+                        <h6 class="m-0 font-weight-bold text-black">
+                            <span data-title="Delays less than 10 mins won't be reflected in this chart.">
+                                Delays Overview (> 10 mins)</span>
+                        </h6>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card-body card-body-do">
+                        <div class="chart-area">
+                            <canvas id="delays-overview-sm-24"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    </section>
+        <br>
+        <br>
+
+
+        <!-- Recent Incidents -->
+        <div class="row row-ri">
+            <div class="accordion wow fadeInUp" id="accordTrains" data-wow-delay="300ms">
+                <div class="alert alert-do alert-info alert-dismissible fade show" role="alert"
+                    style="margin-bottom: 2em; cursor: default;">
+                    <i class="fa-solid fa-circle-info"></i>&nbsp; <b>Delays Overview & Recent Incidents are updated
+                        separately.</b>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header " id="headingSMRT">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSMRT" aria-expanded="true" aria-controls="collapseSMRT">
+                            <h2><img src="img/core-img/stl.png" id="ops-smrt" alt="SMRTT" width="150px"></h2>
+                        </button>
+                    </h2>
+                    <div id="collapseSMRT" class="accordion-collapse" aria-labelledby="headingSMRT"
+                        data-bs-parent="#accordTrains">
+                        <div class="accordion-body">
+                            <!-- <p class="mb-0">
+                        <b>No Reported Incidents</b>
+                    </p> -->
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1914816349135888488">Apr
+                                        23:</a></b><br>
+                                [EWL]: Due to a track point fault, pls add additional 10mins train travel time between
+                                #Tampines
+                                and #PasirRis. Free regular bus service is available between #Tampines and #PasirRis.
+                            </p>
+                            <hr>
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1912346685872988215">Apr
+                                        16:</a></b><br>
+                                [NSL]: Due to a track fault, pls add 15mins train travel time from #ToaPayoh to #Bishan
+                                towards
+                                #JurongEast. Free regular bus is available between #ToaPayoh and #Bishan.
+                            </p>
+                            <hr>
+                            <p class="mb-0">
+                                <b>- <a href="https://x.com/SMRT_Singapore/status/1908029621167382639">Apr
+                                        4:</a></b><br>
+                                [EWL]: Due to a track fault, please expect an additional 20mins of travelling time
+                                between
+                                #Queenstown and #BoonLay. Shuttle train are available between #Clementi and #JurongEast
+                                and
+                                #JurongEast and #Lakeside. Free regular bus is available between #BuonaVista and
+                                #BoonLay.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header " id="headingSBST">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSBST" aria-expanded="false" aria-controls="collapseSBST">
+                            <h2><img src="img/core-img/sbstl.png" id="ops-sbst" alt="sbstl" width="150px"></h2>
+                        </button>
+                    </h2>
+                    <div id="collapseSBST" class="accordion-collapse collapse" aria-labelledby="headingSBST"
+                        data-bs-parent="#accordTrains">
+                        <div class="accordion-body">
+                            <p class="mb-0">
+                                <b>No Reported Incidents</b>
+                            </p>
+                            <!-- <p class="mb-0">
+                        <b>- <a href="https://x.com/SBSTransit_Ltd/status/1888715397228380474">Feb
+                                10:</a></b><br>
+                        NEL Service is delayed due to a Signaling Fault. Additional travel time of about 10 minutes may
+                        be expected. We are sorry for the inconvenience caused.
+                    </p> -->
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section><!-- End Hero -->
+
 
 
     <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>Data is obtained through each operator's X/Facebook page</p>
+        <div class="container container-xxl">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-content d-flex align-items-center justify-content-center">
+
+                        <div class="copywrite-text">
+                            <p>
+                                Data is obtained through each operator's X/Facebook page
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
 
+    <!-- Modular DIVs -->
+    <script> w3IncludeHTML(); </script>
 
     <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
         data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-
-
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/index-alt.js"></script>
-
-    <script src="overview/days-overview_exp.js"></script>
+    <script src="js/theme-index.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
-    <script src="js/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 
     <script src="js/pw.bundle.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/swiper-ri.js"></script>
-
     <script src="js/default-assets/active.js"></script>
 
-    <script src="js/preloader.js"></script>
+    <!-- Page level plugins -->
 
-    <script src="js/uptime-tooltip.js"></script>
 
-    <script src="js/uptime-bars.js"></script>
+    <!-- Page level custom scripts -->
+    <script src="overview/delays-overview-both.js"></script>
 
+    <script src="overview/days-overview.js"></script>
 
 
 </body>
